Активация экрана записи звука с кнопкой и таймером

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="dialog_action_no">Нет</string>
     <string name="toast_recording_permissions">Без разрешения запись невозможна</string>
     <string name="notification_channel_id" translatable="false">RecordService</string>
-    <string name="notification_channel_name" translatable="true">Recorder</string>
+    <string name="notification_channel_name" translatable="true">VoiceRecorder</string>
+    <string name="descr_FAB">Кнопка</string>
 </resources>
